--- a/login/index.html
+++ b/login/index.html
@@ -19,10 +19,10 @@
                 <h1 class="text-[40px] not-italic font-semibold mb-4 text-slate-800">Campus Coex</h1>
                 <hr class="bg-slate-500 font-bold mb-2">
                 <p class="text-[28px]  text-inherit font-light mb-2"  >Registrarse</p>
-                <label class="font-medium "  for="">Nombre de usuario</label>
-                <input type="text" class="border border-slate-300 w-90 h-8 font-light" name="" id="" placeholder="  Nombre de usuario">
+                <label class="font-medium   "  for="">Nombre de usuario</label>
+                <input type="text" class="  border border-slate-300 w-90 h-8 font-light  focus:outline-none focus:ring focus:border-red-500 focus:ring-red-200 indent-3" name="" id="" placeholder="Nombre de usuario">
                 <label class="font-medium text-[16px]" for="">Contraseña</label> 
-                <input type="text" class="border border-slate-300 w-90 h-8 mb-2 font-light" name="" id="" placeholder="  Contraseña">
+                <input type="text" class="border border-slate-300 w-90 h-8 mb-2 focus:outline-none focus:ring focus:border-red-500 focus:ring-red-200 indent-3" name="" id="" placeholder="Contraseña">
                  <div class="flex  justify-center  content-center ">  
                     <button type="button" class="bg-red-700 w-28 h-8 text-white font-semibold hover:bg-red-800">Acceder</button>
                  </div>
